# llm-wiki

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_USAGE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SESSION_SUMMARY.md  SHARE.md  SOCIAL_MEDIA.md  config.yaml.example  migrate_index.py  pyproject.toml  requirements.txt  setup.py  wiki_cli.py
core/: __init__.py  archive.py  cascade.py  index_manager.py  ingest.py  lint.py  llm.py  merge.py  query.py  router.py
docs/optimization/: complete-query.md  incremental-update.md  two-step-ingest.md
docs/superpowers/plans/: 2026-04-19-dual-wiki-refactor.md  2026-04-19-llm-wiki.md  2026-04-22-pure-rules.md
docs/superpowers/specs/: 2026-04-19-dual-wiki-refactor.md  2026-04-19-llm-wiki-design.md  2026-04-21-opensource-release-design.md
examples/research-notes/: README.md  setup.sh
llm_wiki/: __init__.py  cli.py
llm_wiki/core/: ingest.py  llm.py  merge.py  merge_optimizer.py  query.py  search.py
llm_wiki/utils/: file_ops.py  init_wiki.py  parser.py
tests/: test_file_ops.py  test_init_wiki.py  test_llm.py  test_router.py
utils/: __init__.py  init_wiki.py
